--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
   <h2>Model Overview</h2>
   <div class="fig-model">
-    <img src="system overview.pdf" alt="Architecture of AIDD">
+    <img src="system_overview.png" alt="Architecture of AIDD">
   </div>
 
   <h2>Audio Inpainting Samples</h2>
