--- a/index.html
+++ b/index.html
@@ -98,27 +98,27 @@
       <tbody>
         <tr>
           <td>1819_seg5</td>
-          <td><audio controls src="examples/MusicNet/original/1819_seg5.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/masked/1819_seg5_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/1819_seg5.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/masked/1819_seg5_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2106_seg2</td>
-          <td><audio controls src="examples/MusicNet/original/2106_seg2.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/masked/2106_seg2_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2106_seg2.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/masked/2106_seg2_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2303_seg6</td>
-          <td><audio controls src="examples/MusicNet/original/2303_seg6.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/masked/2303_seg6_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2303_seg6.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/masked/2303_seg6_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2382_seg3</td>
-          <td><audio controls src="examples/MusicNet/original/2382_seg3.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/masked/2382_seg3_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/50ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2382_seg3.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/masked/2382_seg3_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/50ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
         </tr>
       </tbody>
     </table>
@@ -136,27 +136,27 @@
       <tbody>
         <tr>
           <td>1819_seg5</td>
-          <td><audio controls src="examples/MusicNet/original/1819_seg5.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/masked/1819_seg5_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/1819_seg5.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/masked/1819_seg5_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2106_seg2</td>
-          <td><audio controls src="examples/MusicNet/original/2106_seg2.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/masked/2106_seg2_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2106_seg2.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/masked/2106_seg2_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2303_seg6</td>
-          <td><audio controls src="examples/MusicNet/original/2303_seg6.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/masked/2303_seg6_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2303_seg6.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/masked/2303_seg6_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2382_seg3</td>
-          <td><audio controls src="examples/MusicNet/original/2382_seg3.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/masked/2382_seg3_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/100ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2382_seg3.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/masked/2382_seg3_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/100ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
         </tr>
       </tbody>
     </table>
@@ -173,27 +173,27 @@
       <tbody>
         <tr>
           <td>1819_seg5</td>
-          <td><audio controls src="examples/MusicNet/original/1819_seg5.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/masked/1819_seg5_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/1819_seg5.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/masked/1819_seg5_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2106_seg2</td>
-          <td><audio controls src="examples/MusicNet/original/2106_seg2.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/masked/2106_seg2_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2106_seg2.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/masked/2106_seg2_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2303_seg6</td>
-          <td><audio controls src="examples/MusicNet/original/2303_seg6.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/masked/2303_seg6_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2303_seg6.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/masked/2303_seg6_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2382_seg3</td>
-          <td><audio controls src="examples/MusicNet/original/2382_seg3.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/masked/2382_seg3_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/200ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2382_seg3.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/masked/2382_seg3_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/200ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
         </tr>
       </tbody>
     </table>
@@ -210,27 +210,27 @@
       <tbody>
         <tr>
           <td>1819_seg5</td>
-          <td><audio controls src="examples/MusicNet/original/1819_seg5.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/masked/1819_seg5_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/1819_seg5.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/masked/1819_seg5_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/generated/1819_seg5_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2106_seg2</td>
-          <td><audio controls src="examples/MusicNet/original/2106_seg2.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/masked/2106_seg2_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2106_seg2.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/masked/2106_seg2_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/generated/2106_seg2_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2303_seg6</td>
-          <td><audio controls src="examples/MusicNet/original/2303_seg6.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/masked/2303_seg6_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2303_seg6.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/masked/2303_seg6_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/generated/2303_seg6_masked_gen0.wav"></audio></td>
         </tr>
         <tr>
           <td>2382_seg3</td>
-          <td><audio controls src="examples/MusicNet/original/2382_seg3.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/masked/2382_seg3_masked.wav"></audio></td>
-          <td><audio controls src="examples/MusicNet/300ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/original/2382_seg3.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/masked/2382_seg3_masked.wav"></audio></td>
+          <td><audio controls src="examples MusicNet/300ms/generated/2382_seg3_masked_gen0.wav"></audio></td>
         </tr>
       </tbody>
     </table>
