--- a/index.html
+++ b/index.html
@@ -232,6 +232,56 @@
     </table>
   </div>
 
+
+  <h2>MTG Dataset Inpainting Results</h2>
+<p class="centered-paragraph"><strong>Use headphones for best experience.</strong></p>
+
+<div class="table-container">
+  <div class="gap-header">Gap: 500ms</div>
+  <table>
+    <thead>
+      <tr>
+        <th>Original</th>
+        <th>Masked</th>
+        <th>Generated</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><audio controls src="MGT dataset/original/1004034.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/masked/1004034.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/generated/1004034.low.wav"></audio></td>
+      </tr>
+      <tr>
+        <td><audio controls src="MGT dataset/original/1004119.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/masked/1004119.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/generated/1004119.low.wav"></audio></td>
+      </tr>
+      <tr>
+        <td><audio controls src="MGT dataset/original/1004124.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/masked/1004124.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/generated/1004124.low.wav"></audio></td>
+      </tr>
+      <tr>
+        <td><audio controls src="MGT dataset/original/1004128.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/masked/1004128.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/generated/1004128.low.wav"></audio></td>
+      </tr>
+      <tr>
+        <td><audio controls src="MGT dataset/original/1004341.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/masked/1004341.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/generated/1004341.low.wav"></audio></td>
+      </tr>
+      <tr>
+        <td><audio controls src="MGT dataset/original/1006249.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/masked/1006249.low.wav"></audio></td>
+        <td><audio controls src="MGT dataset/generated/1006249.low.wav"></audio></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
   <h2>Conclusion</h2>
   <div class="centered-paragraph">
     <p>
