--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <h2>MusicNet Inpainting Results</h2>
   <p class="centered-paragraph"><strong>Use headphones for best experience.</strong></p>
-  <p>
+  <p class="centered-paragraph">
    For each segment, we introduced four synthetic gaps at fixed, evenly spaced locations.
    The gap durations varied across experiments, ranging from 50ms to 300ms.
     These corrupted inputs were then processed using our model, which reconstructed the missing audio to produce complete, inpainted waveforms.
