--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <h2>Model Overview</h2>
   <div class="fig-model">
-    <img src="system_overview.png" alt="Architecture of AIDD">
+    <img src="system overview.png" alt="Architecture of AIDD">
   </div>
 
   <h2>MusicNet Inpainting Results</h2>
