--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Audio Inpainting using Discrete Diffusion Model (AIDD)</title>
+  <title>Token-based Audio Inpainting via Discrete Diffusion</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <style>
@@ -74,11 +74,11 @@
 
 <body>
 
-  <h1>Audio Inpainting using Discrete Diffusion Model (AIDD)</h1>
+  <h1>Token-based Audio Inpainting via Discrete Diffusion</h1>
 
   <div class="abs centered-paragraph">
     <p>
-      We introduce AIDD, a novel approach for audio inpainting that applies discrete diffusion modeling over tokenized
+      We introduce our method: Audio Inpainting using Discrete Diffusion Model (AIDD), a novel approach for audio inpainting that applies discrete diffusion modeling over tokenized
       representations of audio. Using a pretrained WavTokenizer and a discrete diffusion model, AIDD reconstructs
       missing audio segments with high perceptual fidelity. Our method operates in token space to capture semantic
       structures more effectively and demonstrates superior results on long audio gaps compared to existing methods.
